--- a/index.css
+++ b/index.css
@@ -1,17 +1,61 @@
 *{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: none;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
+body{
+    background-color: #EDEDED;
 }
 form{
     width: 400px;
+    background-color: #FFFFFF;
     border: 1px solid #DEDEDE;
+    margin: 0 auto;
+    margin-top: 200px;
+    padding: 24px 16px;
+    border-radius: 8px;
+}
+form img{
+    width: 100%;
+    border-radius: 16px;
+    box-shadow: 0 5px 10px #00000020;
+    margin-bottom: 26px;
 }
 form label{
     display: block;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 6px;
+    color: #8a2ce2;
 }
 form input{
     width: 100%;
+    height: 44px;
     display: block;
+    border: 2px solid #DEDEDE;
+    border-radius: 4px;
+    padding-left: 10px;
+    margin-bottom: 16px;
+}
+form input:focus{
+    border-color: #8a2ce2;
 }
 form button{
-    
+    width: 100%;
+    height: 44px;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 4px;
+    background-color: #8a2ce2;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition-duration: 300ms;
+}
+form button:hover{
+    background-color: #6611b6;
 }
